--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="fondo">#D8BDBD</color>
     <color name="boton">#FFCF3F</color>
     <color name="backText">#D9D9D9</color>
+    <color name="barraInferior">#C09B30</color>
 </resources>
