--- a/app/src/main/res/layout/activity_remember.xml
+++ b/app/src/main/res/layout/activity_remember.xml
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:backgroundTint="@color/boton"
-        android:text="Send Email"
+        android:text="@string/btn_send"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -55,7 +55,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:backgroundTint="#A57C00"
-        android:text="Cancel"
+        android:text="@string/btn_cancel"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -67,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="276dp"
-        android:text="Regain Pass"
+        android:text="@string/btn_regain"
         android:textColor="#A57C00"
         android:textSize="36dp"
         app:layout_constraintEnd_toEndOf="parent"
