--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -65,16 +64,18 @@
 
         <Button
             android:id="@+id/btn_logout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="43dp"
+            android:layout_margin="32dp"
+            android:layout_marginTop="144dp"
+            android:background="@drawable/rounded_button"
             android:text="@string/btn_loguot"
             android:textColor="@color/white"
-            android:background="@color/purple_500"
-            app:layout_constraintTop_toBottomOf="@+id/edit_profile_button"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintWidth_percent="0.8"
-            android:layout_margin="32dp" />
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edit_profile_button"
+            app:layout_constraintWidth_percent="0.8" />
 
         <ImageButton
             android:id="@+id/btn_show_bottom_sheet"
