--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -118,4 +118,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/hotel" />
 
+    <Button
+        android:id="@+id/btngoogle"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="152dp"
+        android:backgroundTint="@color/boton"
+        android:text="Sign In google"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
