--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -38,15 +38,15 @@
 
 
     <View
-        android:id="@+id/bar_language"
+        android:id="@+id/bar_language2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="72dp"
         android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch_notifications" />
+        app:layout_constraintTop_toBottomOf="@+id/bar_language" />
 
     <TextView
         android:id="@+id/tv_lang_title"
@@ -66,24 +66,36 @@
         android:id="@+id/spinner_language"
         android:layout_width="176dp"
         android:layout_height="29dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="28dp"
         android:entries="@array/languages"
         android:prompt="@string/select_language"
         android:spinnerItemStyle="@style/SpinnerItemStyle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.871"
+        app:layout_constraintHorizontal_bias="0.921"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bar_language" />
+        app:layout_constraintTop_toBottomOf="@+id/switch_notifications" />
 
     <Button
         android:id="@+id/btn_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="76dp"
         android:text="Guardar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.459"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_language" />
+
+    <View
+        android:id="@+id/bar_language"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switch_notifications" />
 
     <ImageView
         android:id="@+id/barra"
