--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:backgroundTint="@color/boton"
-        android:text="Sign In"
+        android:text="@string/btn_signIn"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -124,7 +124,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="152dp"
         android:backgroundTint="@color/boton"
-        android:text="Sign In google"
+        android:text="@string/btn_google"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
