--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,7 +16,6 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:src="@drawable/profile"
-            android:contentDescription="algo"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +28,7 @@
             android:id="@+id/name_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name"
+            android:text="@string/edt_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/black"
             app:layout_constraintTop_toBottomOf="@+id/profile_image"
@@ -41,7 +40,7 @@
             android:id="@+id/email_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Email"
+            android:text="@string/edt_email"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/black"
             app:layout_constraintTop_toBottomOf="@+id/name_textview"
@@ -53,7 +52,7 @@
             android:id="@+id/edit_profile_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="edit"
+            android:text="@string/btn_edit"
             android:textColor="@color/white"
             android:backgroundTint="@color/boton"
             app:layout_constraintTop_toBottomOf="@+id/email_textview"
