--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -68,6 +68,7 @@
             android:layout_margin="32dp"
             android:layout_marginTop="144dp"
             android:background="@drawable/rounded_button"
+            android:drawableRight="@drawable/ic_logout"
             android:text="@string/btn_loguot"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
@@ -77,12 +78,12 @@
             app:layout_constraintWidth_percent="0.8" />
 
         <ImageButton
-            android:id="@+id/btn_show_bottom_sheet"
+            android:id="@+id/btn_menu"
             android:layout_width="58dp"
             android:layout_height="59dp"
             android:layout_marginTop="4dp"
             android:background="@null"
-            android:src="@drawable/menu"
+            android:src="@drawable/ic_menu"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.985"
             app:layout_constraintStart_toStartOf="parent"
