--- a/app/src/main/res/layout/activity_list_reviews_avtivity.xml
+++ b/app/src/main/res/layout/activity_list_reviews_avtivity.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListReviewsAvtivity">
+    tools:context=".menus.ListReviewsAvtivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
