--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -79,10 +79,9 @@
         android:id="@+id/btn_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="164dp"
         android:text="@string/btn_save"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.459"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_language" />
 
@@ -96,6 +95,21 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/switch_notifications" />
+
+    <Switch
+        android:id="@+id/switch_theme"
+        android:layout_width="194dp"
+        android:layout_height="34dp"
+        android:layout_marginStart="184dp"
+        android:layout_marginTop="192dp"
+        android:padding="8dp"
+        android:text="@string/txt_opcionTheme"
+        android:textColor="@color/white"
+        android:textOff="@string/txt_claro"
+        android:textOn="@string/txt_oscuro"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/barra"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <ImageView
         android:id="@+id/barra"
