BottomSheet diseño bordes arreglado

--- a/app/src/main/res/layout/bottomsheet_fragment.xml
+++ b/app/src/main/res/layout/bottomsheet_fragment.xml
@@ -20,10 +20,10 @@
         android:id="@+id/btn_config"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:drawableLeft="@drawable/ic_settings"
         android:gravity="left|center_vertical"
         android:text="@string/btn_options"
+        android:background="#00D8BDBD"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -37,6 +37,7 @@
         android:drawableLeft="@drawable/ic_fav"
         android:gravity="left|center_vertical"
         android:text="@string/btn_saves"
+        android:background="#00D8BDBD"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -50,6 +51,7 @@
         android:drawableLeft="@drawable/ic_list"
         android:gravity="left|center_vertical"
         android:text="@string/btn_list"
+        android:background="#00D8BDBD"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -63,6 +65,7 @@
         android:drawableLeft="@drawable/ic_info"
         android:gravity="left|center_vertical"
         android:text="@string/edt_info"
+        android:background="#00D8BDBD"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
