--- a/app/src/main/res/drawable/rounded_corners.xml
+++ b/app/src/main/res/drawable/rounded_corners.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <corners android:topRightRadius="16dp"
         android:topLeftRadius="16dp"/>
-    <padding android:left="10dp"
-        android:right="10dp"/>
-    <solid android:color="#857373" />
+    <padding android:left="12dp"
+        android:right="12dp"/>
+    <solid android:color="@color/fondo" />
 </shape>
