Recogida datos usuario

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/fondo"
+    android:background="@color/design_default_color_secondary"
     tools:context=".MainActivity">
 
     <!-- FrameLayout para el fragmento -->
