--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,15 +6,15 @@
     android:layout_width="match_parent"
     android:background="@color/fondo"
     android:layout_height="match_parent">
-
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="268dp"
-        android:text="Button"
+    
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/hotelList"
+        android:layout_width="409dp"
+        android:layout_height="733dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_hotel" />
 </androidx.constraintlayout.widget.ConstraintLayout>
